# plasma-mobile-sounds

./: CMakeLists.txt  README.md
original/notifications/: Blip.mmpz
original/ringtones/: Elevated.mmpz  Errand.mmpz  Machine.mmpz  Nightlights.mmpz  Progressive.mmpz  Spatial.mmpz
original/ringtones/Gentle/: alarm2.mmpz
original/ringtones/Miniature/: alarm-3.mmpz
plasma-mobile/: index.theme
plasma-mobile/stereo/notifications/: Awaken.oga  Blip.oga  Doorbell.oga  Pointed.oga
plasma-mobile/stereo/ringtones/: Arp.oga  Crunch.oga  Elevated.oga  Errand.oga  Gentle.oga  Glazed.oga  Lightly.oga  Machine.oga  Miniature.oga  Morning Rush.oga  Nightlights.oga  On The Way.oga  Progressive.oga  Revelation.oga  Slowly.oga  Spatial.oga  Unfamiliar.oga  Unknown.oga  Wink.oga  Wubstep.oga
source/notifications/: Awaken.mmpz  Doorbell.mmpz  Pointed.mmpz
source/ringtones/: Arp.mmpz  Crunch.mmpz  Morning Rush.mmpz  Revelation.mmpz  Slowly.mmp  Unfamiliar.mmpz  Wubstep.mmpz
source/ringtones/Glazed/: ringtone-1.mmpz
source/ringtones/Lightly/: ringtone-10.mmpz
source/ringtones/On The Way/: ringtone-3.mmpz
